--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.4",
     "datauri": "^0.6.0",
+    "dateformat": "^1.0.11",
     "ejs": "^2.3.1",
     "express": "^4.12.3",
     "express-session": "^1.11.1",
